# stock-deep-dive-assistant

./: .gitignore  README.md  prek.toml  start-dev.ps1  start-dev.sh
.github/: pull_request_template.md
backend/: .env.example  config.py  main.py  portfolio.json  pyproject.toml
backend/api/: dependencies.py  routes.py
backend/application/: analysis.py
backend/common/: client.py  config.py  logging.py  types.py  utils.py
backend/core/: helpers.py  models.py  routes.py  services.py
backend/data/: watchlist.json
backend/domain/: exceptions.py  models.py
backend/features/advanced/: service.py
backend/features/ai/: service.py
backend/features/data/: service.py
backend/features/fundamental/: service.py
backend/features/performance/: service.py
backend/features/portfolio/: service.py
backend/features/technical/: service.py
backend/features/watchlist/: service.py
backend/infrastructure/: logging.py  persistence.py
backend/prompts/: stock_analysis.jinja2
backend/services/: advanced.py  ai.py  analyzer.py  fundamental.py  performance.py  technical.py  watchlist.py
backend/shared/: domain.py  requests.py  responses.py
backend/sources/: base.py  yahoo.py
backend/tests/sources/: test_yahoo.py
docs/superpowers/plans/: 2026-04-12-rate-limit-resilience-plan.md
frontend/: .eslintrc.cjs  fly.toml  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  PerformanceCalculatorPage.tsx  index.css  main.tsx
frontend/src/components/: DatePickerInput.tsx
(+39 files in other folders)
