[project]
name = "stock-deep-dive-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Stock Deep Dive Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.131.0",
    "openai>=2.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.1",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "ta>=0.10.2",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.15.2",
]
