[project]
name = "stock-deep-dive-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Stock Deep Dive Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "yfinance>=1.2.0",
    "pandas>=3.0.1",
    "ta>=0.11.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
hooks = [
    "ruff>=0.15.2",
    "pyprojectsort>=0.2.0",
]
