[project]
description = "FastAPI backend for Stock Deep Dive Assistant"
name = "stock-deep-dive-assistant-backend"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "ta>=0.11.0",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
hooks = [
    "detect-secrets>=1.5.0",
    "ruff>=0.15.2",
    "uv-sort>=0.7.0",
]
